# Regression-Supervised-Learning

./: .gitignore  README.md  cluster.py  environment.yml  feature_reduction.py  pyproject.toml  training_regression.py
datasets/aluminum_forced_flow/: test.csv  training.csv  validation.csv
datasets/aluminum_forced_flow/raw/: 216_Points_Aluminum_ForcedFlow.csv
datasets/boston/: test.csv  training.csv  validation.csv
datasets/forced_flow/: test.csv  training.csv  validation.csv
datasets/forced_flow/raw/: data.csv
datasets/mix_data/: test.csv  training.csv  validation.csv
datasets/mix_data/raw/: mixed_flow_mixed_materials.csv
datasets/mix_data_80_split/: test.csv  training.csv  validation.csv
datasets/mix_data_80_split/raw/: new split.csv
datasets/mobile/: test.csv  test_useless_from_kaggle.csv  training.csv  validation.csv
experiments/: RunLearningCurves.ipynb  RunValidationCurves.ipynb  TestMobileNeuralNetworks.ipynb  TuningDtMobileNeuralNetwork.ipynb  TuningEMMobileNeuralNetwork.ipynb  TuningIcaMobileNeuralNetwork.ipynb  TuningKmeansMobileNeuralNetwork.ipynb  TuningNormalMobileNeuralNetwork.ipynb  TuningPcaMobileNeuralNetwork.ipynb  TuningRpMobileNeuralNetwork.ipynb
experiments/draft export/: table.xlsx
utils/: general_utils.py  plot.py  post_processing.py  pre_processing.py
