[tool.poetry]
name = "Regression-Supervised-Learning"
version = "0.1.0"
description = ""
authors = ["Brad Smith <bradsmithvt18@gmail.com>", "Joe Herring <joe.herring2@gmail.com>"]
readme = "README.md"
packages = [{include = "Regression-Supervised-Learning"}]

[tool.poetry.dependencies]
python = ">=3.8.0,<3.12.0"
matplotlib = ">= 3.5.1"# For generating plots
pyyaml = ">= 6.0"# For saving yaml type files
jupyter = ">= 1.0.0"# For running experiments
scikit-learn = ">= 1.0.2" # For accuracy score
tensorflow = ">= 2.7.0"# For Neural Network tuning
imbalanced-learn = ">= 0.9.0" # For correcting class imbalance
pandas = ">= 1.4.2" # For generating results to compare in testing
openpyxl = ">= 3.0.9" # For writing Excel files with results tables
scipy = ">= 1.8.0" # For computing kurtosis
scikeras = ">= 0.7.0" # Helpful wrapper for using tensorflow models with sklearn

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"